--- a/src/package.json
+++ b/src/package.json
@@ -6,6 +6,7 @@
     },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
+        "@inertiajs/inertia": "^0.11.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^4.6.2",
         "autoprefixer": "^10.4.12",
